--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,12 @@
 #myTitle {
   color: rgb(139, 139, 139);
   background-color: rgb(46, 51, 51);
+  text-align: center;
 }
 
 .navbar {
     border-bottom: 4px solid #6e6e6e;
+    width: 100%;
 }
 
 h1 {
@@ -14,10 +16,100 @@ h1 {
     font-size: 25px;
     
 }
+h1 {
+    padding-top: 20px;
+    font-size: 22px;
+    line-height: 40px;
+    border-bottom: 3px solid #6e6e6e;
+}
 
-.auth-image {
+h2,
+h3 {
+    font-size: 20px;
+    border-bottom: 2px solid #6e6e6e;
+}
+
+body {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #6e6e6e;
+    background: url("../images/background.png");
+}
+
+.container {
+    width: 95%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
+
+}
+
+h1,
+h2,
+h3,
+p {
+    margin-bottom: 20px; 
+}
+
+p:last-child {
+    margin-bottom: 0;
+}
+
+#auth-image {
     width: 210px;
     height: auto;
     margin-right: 30px;
     margin-top: 15px;
+    /* color: #6e6e6e; */
+}
+
+.work {
+    width: 250px;
+    height: 250px;
+    margin: 20px 0 30px;
+    overflow: auto;
+    margin-right: 30px;
+    border: 3px solid #6e6e6e;
+}
+
+html, body {
+    height: 100%;
+}
+
+.wrap {
+    /* background-color: rgb(46, 51, 51); */
+    min-height: 100%;
+    /* equal to footer height */
+    margin-bottom: -115px;
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+footer,
+.push {
+  height: 115px;
+}
+
+footer {
+    text-align: center;
+    background: rgb(46, 51, 51);
+    font-size: 10px;
+    border-top: 4px solid #6e6e6e;
+    /* clear: both; */
+    color: #6e6e6e;
+    padding-top: 50px;
+    width: 100%;
+}
+
+.main-section {
+    width: 100%;
+    max-width: 960px;
+    padding: 30px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    background: #313131;
+    border: 2px solid #6e6e6e;
+    height: auto;
 }
