--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,13 @@
   color: rgb(139, 139, 139);
   background-color: rgb(46, 51, 51);
   text-align: center;
+  padding-bottom: 0;
 }
 
 .navbar {
     border-bottom: 4px solid #6e6e6e;
     width: 100%;
+    /* margin-bottom: auto; */
 }
 
 h1 {
@@ -20,13 +22,15 @@ h1 {
     padding-top: 20px;
     font-size: 22px;
     line-height: 40px;
-    border-bottom: 3px solid #6e6e6e;
 }
-
-h2,
-h3 {
+h2 {
     font-size: 20px;
     border-bottom: 2px solid #6e6e6e;
+}
+
+h3 {
+    font-size: 20px;
+
 }
 
 body {
@@ -47,9 +51,9 @@ body {
 
 h1,
 h2,
-h3,
 p {
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
+    text-decoration: none; 
 }
 
 p:last-child {
@@ -62,16 +66,36 @@ p:last-child {
     margin-right: 30px;
     margin-top: 15px;
     /* color: #6e6e6e; */
+    /* position: relative; */
 }
 
 .work {
-    width: 250px;
-    height: 250px;
-    margin: 20px 0 30px;
-    overflow: auto;
+    position: relative;
+    margin: 30px 0 30px;
+    /* overflow: auto; */
     margin-right: 30px;
     border: 3px solid #6e6e6e;
+    
 }
+
+.caption {
+    text-align: center;
+    position: absolute;
+    left: 0;
+    top: 100;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 100%;
+    height: max-content;
+    background:rgb(46, 51, 51);
+    border-top: 2px solid #6e6e6e;
+}
+.caption a {
+    color: #6e6e6e;
+}
+
+
 
 html, body {
     height: 100%;
@@ -93,13 +117,14 @@ footer,
 }
 
 footer {
+    margin-top: 5%;
     text-align: center;
     background: rgb(46, 51, 51);
     font-size: 10px;
     border-top: 4px solid #6e6e6e;
     /* clear: both; */
     color: #6e6e6e;
-    padding-top: 50px;
+    padding-top: auto;
     width: 100%;
 }
 
@@ -107,9 +132,26 @@ footer {
     width: 100%;
     max-width: 960px;
     padding: 30px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 5%;
+    margin-bottom: auto;
     background: #313131;
     border: 2px solid #6e6e6e;
-    height: auto;
+}
+
+/* Contact Page Settings */
+
+input[type=submit] {
+    padding: 10px 25px;
+    font-size: 20px;
+    color: #6e6e6e;
+    background: rgb(66, 73, 73);
+    border-color: #6e6e6e
+}
+#myTitle {
+    
+}
+/* Hover Styling */
+
+nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
+    background-color: lightgrey;
 }
