--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
     }
     .container, .work, .main-section {
         max-width: 600px;
-        height: auto;
+        height: max-content;
         width: auto;
         margin-left: 5%;
         }
