--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 .navbar {
     border-bottom: 4px solid #6e6e6e;
     width: 100%;
+    padding-bottom: 0px;
     /* margin-bottom: auto; */
 }
 
@@ -19,16 +20,12 @@ h1 {
     font-family: 'Georgia', Times, 'Times New Roman', serif;
     font-weight: 650;
     color: #6e6e6e;
-    font-size: 25px;
-    
-}
-h1 {
     padding-top: 20px;
     font-size: 22px;
     line-height: 40px;
-    border-bottom: 2px solid #6e6e6e;
 }
 h2 {
+    padding-top: 20px;
     font-size: 20px;
     border-bottom: 2px solid #6e6e6e;
 }
@@ -169,10 +166,9 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
   
   }
 @media screen and (max-width:992px) {
-  .container, .work, .main-section {
+  .container, .work, .main-section, .wrap {
     max-width: 700px;
     width: auto;
-    margin-left: 10%;
     }
     h1 {
         text-align: center;
@@ -189,10 +185,19 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
     #myTitle {
         width:25%;
     }
-    .container, .work, .main-section {
-        max-width: 600px;
+    .container, .work, .main-section, .wrap {
+        max-width: 500px;
         height: max-content;
         width: auto;
-        margin-left: 5%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         }
+    #auth-image {
+        width: 150px;
+        height: auto;
+        margin-right: 30px;
+        margin-top: 15px;
+    }
+
 }
