testing out more responsiveness settings. trying to make gap smaller at bottom on mobile screen. v 2.0

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
     }
     .container, .work, .main-section, .wrap {
         max-width: 500px;
-        height: max-content;
+        height: auto;
         width: auto;
         display: flex;
         flex-direction: column;
