--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* general settings */
 #myTitle {
   color: rgb(139, 139, 139);
   background-color: rgb(46, 51, 51);
@@ -63,14 +64,16 @@ p:last-child {
     margin-bottom: 0;
 }
 
+/* my picture settings */
+
 #auth-image {
     width: 210px;
     height: auto;
     margin-right: 30px;
     margin-top: 15px;
-    /* color: #6e6e6e; */
-    /* position: relative; */
 }
+
+/* portfolio page settings */
 
 .work {
     position: relative;
@@ -101,7 +104,7 @@ p:last-child {
 }
 
 
-
+/* Sticky Footer */
 html, body {
     height: 100%;
 }
@@ -120,7 +123,7 @@ footer,
 .push {
   height: 115px;
 }
-
+/* end of sticky footer */
 footer {
     margin-top: 5%;
     text-align: center;
@@ -159,6 +162,8 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
     background-color: lightgrey;
 }
 
+/* media code for reponsiveness */
+
 @media screen and (min-width:768px){
     h3 {
       font-size: 15px;
@@ -193,9 +198,6 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
         flex-direction: column;
         align-items: center;
         }
-    .wrap {
-        margin-bottom: 50px;
-    }
     #auth-image {
         width: 150px;
         height: auto;
