--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,11 +177,11 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
     }
     h1 {
         text-align: center;
-        font-size: 20px;
+        /* font-size: 20px; */
     }
-    p {
+    /* p {
         font-size: 15px;
-    }
+    } */
 }
 @media screen and (max-width:768px){
     h1 {
