--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,16 +177,25 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
     }
     h1 {
         text-align: center;
-        /* font-size: 20px; */
+        font-size: 28px;
     }
-    /* p {
-        font-size: 15px;
-    } */
+    p {
+        font-size: 20px;
+    }
+    h2 {
+        font-size: 23px;
+    }
 }
 @media screen and (max-width:768px){
-    /* h1 {
-        font-size: 18px;
-    } */
+    p {
+        font-size: 22px;
+    }
+    h2 {
+        font-size: 25px;
+    }
+    h1 {
+        font-size: 30px;
+    }
     #myTitle {
         width:25%;
     }
