--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,7 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
   .container, .work, .main-section, .wrap {
     max-width: 700px;
     width: auto;
+    margin-top: center;
     }
     h1 {
         text-align: center;
@@ -206,6 +207,7 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: center;
         }
     #auth-image {
         width: 150px;
