--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,6 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
   .container, .work, .main-section, .wrap {
     max-width: 700px;
     width: auto;
-    margin-top: center;
     }
     h1 {
         text-align: center;
@@ -202,12 +201,11 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
     }
     .container, .work, .main-section, .wrap {
         max-width: 500px;
-        height: auto;
+        height: 90%;
         width: auto;
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: center;
         }
     #auth-image {
         width: 150px;
