Changing submit buttun background color to match.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,7 @@ footer {
 input[type=submit] {
     padding: 10px 25px;
     font-size: 20px;
-    color: #6e6e6e;
+    color: #343A40;
     background: rgb(66, 73, 73);
     border-color: #6e6e6e
 }
