--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* general settings */
 #myTitle {
-  color: rgb(139, 139, 139);
-  background-color: rgb(46, 51, 51);
+  color: rgb(46, 51, 51);
+  background: rgb(46, 51, 51);
   text-align: center;
   padding-bottom: 0;
 }
@@ -50,6 +50,16 @@ body {
     margin: 0 auto;
     clear: both;
     
+    
+
+}
+.container1 {
+    border: 3px solid #6e6e6e;
+    background-color: rgb(46, 51, 51);
+    padding: 30px;
+    margin-top: 30px;
+    margin-bottom: 204px;
+    height: auto;
 
 }
 
@@ -171,7 +181,7 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
   
   }
 @media screen and (max-width:992px) {
-  .container, .work, .main-section, .wrap {
+  .container, .container1, .work, .main-section, .wrap {
     max-width: 700px;
     width: auto;
     }
@@ -199,9 +209,8 @@ nav a:hover, .caption a:hover, #myTitle:hover, input[type=submit]:hover {
     #myTitle {
         width:25%;
     }
-    .container, .work, .main-section, .wrap {
+    .container, .container1, .work, .main-section, .wrap {
         max-width: 500px;
-        height: 90%;
         width: auto;
         display: flex;
         flex-direction: column;
