Added links to linkedin and github. also added link to resume.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,7 @@ footer {
 
 .main-section, .main-section-contact {
     width: 100%;
+    height: max-content;
     max-width: 960px;
     padding: 30px;
     margin-top: 5%;
