--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,13 +91,9 @@ p:last-child {
 .work {
     position: relative;
     height: max-content;
-    margin: 30px 0 30px;
+    margin: 30px 15px 15px 15px;
     /* overflow: auto; */
-    margin-right: 30px;
     border: 3px solid #6e6e6e;
-    margin-bottom: 147px;
-    
-    
 }
 
 .img-fluid {
