--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,8 @@ p:last-child {
     right: 0;
     bottom: 0; */
     /* margin: auto; */
-    margin-top: max-content;
+    margin-top: 5px;
+    padding-top: 5px;
     width: 100%;
     height: max-content;
     background:rgb(46, 51, 51);
